@@ -15,6 +15,7 @@ Changes in progress
 - mu-common: Deactivate pingback to avoid attacks to other sites (Trello #1275)
 - mu-common: Removed fix for post thumbnails broken due to upgrading to WP 4.4. No longer necessary in WP 4.5
 - buddypress-docs: Suggest labels when adding new documents (Trello #1228)
+- widget-visibility-without-jetpack: Added option to show content only in selected groups of buddypress (Trello #1262)
 
 
 Changes 16.05.03
